# restic-scripts

./: README.md  TODO.md  env.sh  main.py  maint.sh  pyproject.toml  repository.txt
freshrss/: README.md  backup.sh  excludes.txt  includes.txt  restic-freshrss-backup.service  restic-freshrss-backup.timer
healthchecks/: README.md  backup.sh  includes.txt  restic-healthchecks-backup.service  restic-healthchecks-backup.timer
memos/: README.md  backup.sh  excludes.txt  includes.txt  restic-memos-backup.service  restic-memos-backup.timer
src/: -llm.py  config.py.example  healthchecks.py  input.py  llm.py  utils.py
systemd-units/: backup.sh  excludes.txt  includes.txt
umami/: README.md  backup.sh  restic-umami-backup.service  restic-umami-backup.timer
vaultwarden/: README.md  backup.sh  excludes.txt  includes.txt  restic-vaultwarden-backup.service  restic-vaultwarden-backup.timer
