[project]
name = "restic-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.ruff.lint]
# Skip unused variable rules (`F841`).
ignore = ["F401", "F841"]
